Centralizar opciones del dashboard.

--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,21 @@ body {
   font-size: 30px;
   color: #AEAEAE;
 }
+
+.containes_admin-dashboard {
+  padding: 160px 0px 20px;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.containes_admin-options {
+  width: 70%;
+  margin: 0px auto;
+  padding-top: 50px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+}
