--- a/src/components/AdminCard/CardAdmin.css
+++ b/src/components/AdminCard/CardAdmin.css
@@ -1,44 +1,4 @@
-.card {
-  width: 100%;
-  max-width: 300px;
-  background: radial-gradient( #37374a, #6d6d8a);
-  border-radius: 4px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px;
-}
-
-.card-image {
-  width: 100%;
-  height: auto;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-}
-
-.card-content {
-  padding: 16px;
-}
-
-.card-title {
-  margin-top: 0;
-  margin-bottom: 8px;
-  font-size: 18px;
-  font-weight: bold;
-}
-
-.card-description {
-  margin-top: 0;
-  margin-bottom: 16px;
-  font-size: 14px;
-}
-
-@media (min-width: 768px) {
-  .card {
-    display: inline-block;
-    vertical-align: top;
-    margin-right: 20px;
-  }
-}
-.card {
+.card-Admin {
   width: 100%;
   max-width: 300px;
   background:  #6d6d8a;
@@ -47,32 +7,32 @@
   margin-bottom: 20px;
 }
 
-.card-image {
+.card-image-Admin {
   width: 100%;
   height: auto;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
 }
 
-.card-content {
+.card-content-Admin {
   padding: 16px;
 }
 
-.card-title {
+.card-title-Admin {
   margin-top: 0;
   margin-bottom: 8px;
   font-size: 18px;
   font-weight: bold;
 }
 
-.card-description {
+.card-description-Admin {
   margin-top: 0;
   margin-bottom: 16px;
   font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  .card {
+  .card-Admin {
     display: inline-block;
     vertical-align: top;
     margin-right: 20px;
