--- a/src/pages/Admin/CustomersAdmin/CustomersAdmin.css
+++ b/src/pages/Admin/CustomersAdmin/CustomersAdmin.css
@@ -1,4 +1,79 @@
-.container{
+.card-customers{
+    background-color: #1f1f1f;
     color: #fff;
+    width: 70%;
+    margin: 0px auto;
+    display: flex;
+    border-radius: 20px;
+    box-shadow: 0px 1px 5px rgba(161, 161, 171, 0.914);
+  }
 
-}
+  .card-customers > section {
+    width: 300px;
+    margin: 20px;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  }
+  
+  .card-header-customers {
+    background-color: #333;
+    padding: 10px;
+    text-align: center;
+  }
+  
+  .card-body-customers {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+  }
+  
+  .card-image-customers {
+    padding: 10px;
+    text-align: center;
+
+  }
+  
+  .card-image-customers img {
+    width: 100%;
+    height: auto;
+    border-radius: 4px;
+  }
+  
+  .card-info-customers {
+    padding: 10px;
+    text-align: center;
+  }
+  
+  .card-info-customers p {
+    margin: 0;
+    margin-bottom: 10px;
+  }
+  
+  .card-info-customers p:last-child {
+    margin-bottom: 0;
+  }
+  
+  .buttons-customers{
+    display: flex;
+    justify-content: space-between;
+    padding: 10px;
+    background-color: #333;
+  }
+  
+  .buttons-customers .editar-customers {
+    
+    flex-grow: 1;
+    background-color: #1f1f1f;
+    text-align: center;
+    box-shadow: 0px 1px 1px rgba(161, 161, 171, 0.914);
+    border-radius: 15px;
+    color: white;
+    
+  }
+  
+  .buttons-customers .eliminar-customers {
+    margin-left: 10px;
+  }
+  
