--- a/src/components/AdminCard/CardAdmin.css
+++ b/src/components/AdminCard/CardAdmin.css
@@ -31,6 +31,11 @@
   font-size: 14px;
 }
 
+.card-button-Admin {
+  text-decoration: none;
+  
+}
+
 @media (min-width: 768px) {
   .card-Admin {
     display: inline-block;
