--- a/src/pages/Admin/CustomersAdmin/CustomersAdmin.css
+++ b/src/pages/Admin/CustomersAdmin/CustomersAdmin.css
@@ -9,11 +9,16 @@
   }
 
   .card-customers > section {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     width: 300px;
+    height: 600px;
     margin: 20px;
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+
   }
   
   .card-header-customers {
@@ -36,8 +41,8 @@
   }
   
   .card-image-customers img {
-    width: 100%;
-    height: auto;
+    width: 200px;
+    height: 200px;
     border-radius: 4px;
   }
   
@@ -68,7 +73,7 @@
     background-color: #1f1f1f;
     text-align: center;
     box-shadow: 0px 1px 1px rgba(161, 161, 171, 0.914);
-    border-radius: 15px;
+    border-radius: 10px;
     color: white;
     
   }
