--- a/src/pages/Admin/EmployeesAdmin/EmployeesAdmin.css
+++ b/src/pages/Admin/EmployeesAdmin/EmployeesAdmin.css
@@ -9,7 +9,11 @@
   }
 
   .card-employee > section {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     width: 300px;
+    height: 600px;
     margin: 20px;
     border-radius: 8px;
     overflow: hidden;
@@ -36,8 +40,8 @@
   }
   
   .card-image-employee img {
-    width: 100%;
-    height: auto;
+    width: 200px;
+    height: 200px;
     border-radius: 4px;
   }
   
