Organizar orden de mostrar los datos.

--- a/src/index.css
+++ b/src/index.css
@@ -109,7 +109,9 @@ body {
   font-weight: 400;
   font-size: 20px;
   line-height: 180%;
-
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
   color: #5C5D75;
 
 }
