--- a/src/pages/Admin/EmployeesAdmin/EmployeesAdmin.css
+++ b/src/pages/Admin/EmployeesAdmin/EmployeesAdmin.css
@@ -76,4 +76,31 @@
   .buttons-employee .eliminar-employee{
     margin-left: 10px;
   }
+
+
+  .form-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
+  }
+  
+  .inputNombre {
+    margin-bottom: 10px;
+    padding: px;
+    margin: 20px;
+  }
+  
+  .form-submit {
+    margin-top: 10px;
+    padding: 10px 20px;
+    background-color: #4caf50;
+    color: #ffffff;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .form-submit:hover {
+    background-color: #45a049;
+  }
   
