--- a/src/pages/Admin/FormsGeneral.css
+++ b/src/pages/Admin/FormsGeneral.css
@@ -68,7 +68,6 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-  
     width: 157px;
     height: 50px;
     border-radius: 10px;
@@ -135,7 +134,6 @@
     font-size: 14px;
   }
 
-  /* Estilos para el formulario */
 .form-container {
   width: 400px;
   margin: 0 auto;
@@ -145,45 +143,80 @@
 .form-label {
   display: block;
   margin-bottom: 5px;
+  color: #fff;
 }
 
 .form-input {
+  text-align: center;
   width: 100%;
   padding: 8px;
   margin-bottom: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
+  justify-content: center;
+  align-items: center;
 }
 
 .form-submit {
   padding: 8px 16px;
-  background-color: #4caf50;
+  background-color: #747171;
   color: white;
   border: none;
   border-radius: 4px;
   cursor: pointer;
 }
 
-.section-container {
-  padding: 20px;
+.form-submit:hover {
+  padding: 10px 20px;
+  background-color: #6d6c6d;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  border-radius: 10px;
+  margin-bottom: 10px;
+    box-shadow: 2px 2px 2px rgba(175, 122, 197 , 0.914);
+    
 }
 
-.navbar-container {
-  background-color: #333;
-  color: white;
+.section-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-container {
+  box-shadow: 0px 1px 1px rgba(175, 122, 197 , 0.914);
+  border-radius: 20px;
+  background-color: #313133;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.form-input {
+  width: 300px;
+  padding: 10px;
+  margin-bottom: 10px;
+  background-color: #313133;
+  color: #fff;
+}
+
+.inputNombre {
+  font-weight: bold;
+}
+
+.form-submit {
+  padding: 10px 20px;
+  background-color: #6d6c6d;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+span{
+  color: #9c8ba4;
   padding: 10px;
 }
-
-.navbar-link {
-  color: white;
-  text-decoration: none;
-}
-
-.navbar-link:hover {
-  text-decoration: underline;
-}
-
-
-
-  
-  
