--- a/src/pages/Admin/CustomersAdmin/CustomersAdmin.css
+++ b/src/pages/Admin/CustomersAdmin/CustomersAdmin.css
@@ -72,7 +72,6 @@
     flex-grow: 1;
     background-color: #1f1f1f;
     text-align: center;
-    box-shadow: 0px 1px 1px rgba(161, 161, 171, 0.914);
     border-radius: 10px;
     color: white;
     
@@ -80,5 +79,11 @@
   
   .buttons-customers .eliminar-customers {
     margin-left: 10px;
+    flex-grow: 1;
+    background-color: #1f1f1f;
+    text-align: center;
+    border-radius: 15px;
+    color: white;
+    border: none;
   }
   
