--- a/src/pages/Admin/PasswordsAdmin/PasswordsAdmin.css
+++ b/src/pages/Admin/PasswordsAdmin/PasswordsAdmin.css
@@ -71,7 +71,6 @@
     flex-grow: 1;
     background-color: #1f1f1f;
     text-align: center;
-    box-shadow: 0px 1px 1px rgba(175, 122, 197 , 0.914);
     border-radius: 15px;
     color: white;
     
@@ -79,5 +78,11 @@
   
   .buttons-passwords .eliminar-passwords{
     margin-left: 10px;
+    flex-grow: 1;
+    background-color: #1f1f1f;
+    text-align: center;
+    border-radius: 15px;
+    color: white;
+    border: none;
   }
   
