--- a/src/pages/Admin/SuppliersAdmin/SuppliersAdmin.css
+++ b/src/pages/Admin/SuppliersAdmin/SuppliersAdmin.css
@@ -13,7 +13,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     width: 300px;
-    height: 600px;
+    height: 900px;
     margin: 20px;
     border-radius: 8px;
     overflow: hidden;
@@ -67,17 +67,20 @@
   }
   
   .buttons-suppliers .editar-suppliers {
-    
     flex-grow: 1;
     background-color: #1f1f1f;
     text-align: center;
-    box-shadow: 0px 1px 1px rgba(175, 122, 197 , 0.914);
     border-radius: 15px;
     color: white;
-    
   }
   
   .buttons-suppliers .eliminar-suppliers{
     margin-left: 10px;
+    flex-grow: 1;
+    background-color: #1f1f1f;
+    text-align: center;
+    border-radius: 15px;
+    color: white;
+    border: none;
   }
   
